plugins {
    id("java")
//    id("org.jetbrains.kotlin.jvm") version "1.9.0"
    id("org.jetbrains.intellij") version "1.15.0"
}

group = "org.exbin.deltahex.intellij"
version = "0.2.12"
val ideLocalPath = providers.gradleProperty("ideLocalPath").getOrElse("")

repositories {
    mavenCentral()
}

// Configure Gradle IntelliJ Plugin
// Read more: https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html
intellij {
    type.set("IC") // Target IDE Platform
}

if (ideLocalPath.isEmpty()) {
    intellij {
        version.set("2023.2.1")
        plugins.set(listOf("java"))
    }
} else {
    intellij {
        localPath.set(ideLocalPath)
        // Some variants require to add java plugin due to detection bug
        plugins.set(listOf("java"))
    }
}

sourceSets {
    main {
        resources {
            srcDirs("${rootDir}/src/main/languages")
        }
    }
}

tasks {
    // Set the JVM compatibility versions
    withType<JavaCompile> {
        sourceCompatibility = "17"
        targetCompatibility = "17"
        options.compilerArgs = options.compilerArgs + "-Xlint:unchecked" + "-Xlint:deprecation"
    }
//    withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
//        kotlinOptions.jvmTarget = "17"
//    }

    patchPluginXml {
        sinceBuild.set("232.1")
        untilBuild.set("")
    }

    signPlugin {
        certificateChain.set(System.getenv("CERTIFICATE_CHAIN"))
        privateKey.set(System.getenv("PRIVATE_KEY"))
        password.set(System.getenv("PRIVATE_KEY_PASSWORD"))
    }

    publishPlugin {
        token.set(System.getenv("PUBLISH_TOKEN"))
    }
}

val exbinFrameworkLibraryVersion = "0.3.0-SNAPSHOT"
val binedAppLibraryVersion = "0.3.0-SNAPSHOT"
val binedLibraryVersion = "0.3.0-SNAPSHOT"
val binaryDataLibraryVersion = "0.3.0-SNAPSHOT"

fun exbinFrameworkLibrary(libName: String): String = if (exbinFrameworkLibraryVersion.endsWith("-SNAPSHOTX")) ":${libName}-${exbinFrameworkLibraryVersion}" else "org.exbin.framework:${libName}:${exbinFrameworkLibraryVersion}"
fun binedAppLibrary(libName: String): String = if (binedAppLibraryVersion.endsWith("-SNAPSHOTX")) ":${libName}-${binedAppLibraryVersion}" else "org.exbin.framework:${libName}:${binedAppLibraryVersion}"
fun binedLibrary(libName: String): String = if (binedLibraryVersion.endsWith("-SNAPSHOTX")) ":${libName}-${binedLibraryVersion}" else "org.exbin.bined:${libName}:${binedLibraryVersion}"
fun binaryDataLibrary(libName: String): String = if (binaryDataLibraryVersion.endsWith("-SNAPSHOTX")) ":${libName}-${binaryDataLibraryVersion}" else "org.exbin.auxiliary:${libName}:${binaryDataLibraryVersion}"

repositories {
    flatDir {
        dirs("lib", "lib/jetbrains", "plugins")
    }
    mavenLocal()
}

dependencies {
    implementation(exbinFrameworkLibrary("exbin-framework"))
    implementation(exbinFrameworkLibrary("exbin-framework-basic"))
    implementation(exbinFrameworkLibrary("exbin-framework-frame"))
    implementation(exbinFrameworkLibrary("exbin-framework-ui"))
    implementation(exbinFrameworkLibrary("exbin-framework-ui-theme"))
    implementation(exbinFrameworkLibrary("exbin-framework-ui-theme-api"))
    implementation(exbinFrameworkLibrary("exbin-framework-component"))
//    implementation(exbinFrameworkLibrary("exbin-framework-data"))
    implementation(exbinFrameworkLibrary("exbin-framework-window"))
    implementation(exbinFrameworkLibrary("exbin-framework-action"))
    implementation(exbinFrameworkLibrary("exbin-framework-file"))
    implementation(exbinFrameworkLibrary("exbin-framework-editor"))
    implementation(exbinFrameworkLibrary("exbin-framework-about-api"))
    implementation(exbinFrameworkLibrary("exbin-framework-about"))
    implementation(exbinFrameworkLibrary("exbin-framework-operation"))
    implementation(exbinFrameworkLibrary("exbin-framework-operation-undo"))
    implementation(exbinFrameworkLibrary("exbin-framework-contribution-api"))
    implementation(exbinFrameworkLibrary("exbin-framework-contribution"))
    implementation(exbinFrameworkLibrary("exbin-framework-menu-api"))
    implementation(exbinFrameworkLibrary("exbin-framework-menu"))
    implementation(exbinFrameworkLibrary("exbin-framework-menu-popup"))
    implementation(exbinFrameworkLibrary("exbin-framework-toolbar-api"))
    implementation(exbinFrameworkLibrary("exbin-framework-toolbar"))
    implementation(exbinFrameworkLibrary("exbin-framework-help-api"))
    implementation(exbinFrameworkLibrary("exbin-framework-help"))
    implementation(exbinFrameworkLibrary("exbin-framework-help-online"))
    implementation(exbinFrameworkLibrary("exbin-framework-options"))
    implementation(exbinFrameworkLibrary("exbin-framework-options-api"))
    implementation(exbinFrameworkLibrary("exbin-framework-preferences-api"))
    implementation(exbinFrameworkLibrary("exbin-framework-preferences"))
    implementation(exbinFrameworkLibrary("exbin-framework-language-api"))
    implementation(exbinFrameworkLibrary("exbin-framework-language"))
    implementation(exbinFrameworkLibrary("exbin-framework-text-encoding"))
    implementation(exbinFrameworkLibrary("exbin-framework-text-font"))
    implementation(binedAppLibrary("exbin-framework-bined"))
    implementation(binedAppLibrary("exbin-framework-bined-viewer"))
    implementation(binedAppLibrary("exbin-framework-bined-editor"))
    implementation(binedAppLibrary("exbin-framework-bined-theme"))
    implementation(binedAppLibrary("exbin-framework-bined-bookmarks"))
    implementation(binedAppLibrary("exbin-framework-bined-compare"))
    implementation(binedAppLibrary("exbin-framework-bined-inspector"))
    implementation(binedAppLibrary("exbin-framework-bined-macro"))
    implementation(binedAppLibrary("exbin-framework-bined-objectdata"))
    implementation(binedAppLibrary("exbin-framework-bined-operation"))
    implementation(binedAppLibrary("exbin-framework-bined-operation-bouncycastle"))
    implementation(binedAppLibrary("exbin-framework-bined-search"))
    implementation(binedAppLibrary("exbin-framework-bined-tool-content"))
    implementation(binedLibrary("bined-core"))
    implementation(binedLibrary("bined-section"))
    implementation(binedLibrary("bined-highlight-swing"))
    implementation(binedLibrary("bined-operation"))
    implementation(binedLibrary("bined-operation-swing"))
    implementation(binedLibrary("bined-swing"))
    implementation(binedLibrary("bined-swing-section"))
    implementation(binaryDataLibrary("binary_data"))
    implementation(binaryDataLibrary("binary_data-array"))
    implementation(binaryDataLibrary("binary_data-delta"))
    implementation(":exbin-framework-language-cs_CZ-0.2.4")
    implementation(":exbin-framework-language-de_DE-0.2.4")
    implementation(":exbin-framework-language-es_ES-0.2.4")
    implementation(":exbin-framework-language-fr_FR-0.2.4")
    implementation(":exbin-framework-language-it_IT-0.2.4")
    implementation(":exbin-framework-language-ja_JP-0.2.4")
    implementation(":exbin-framework-language-ko_KR-0.2.4")
    implementation(":exbin-framework-language-pl_PL-0.2.4")
    implementation(":exbin-framework-language-ru_RU-0.2.4")
    implementation(":exbin-framework-language-zh_Hans-0.2.4")
    implementation(":exbin-framework-language-zh_Hant-0.2.4")
    implementation(":exbin-framework-material-iconset-0.2.4")
    implementation(":flatlaf-desktop-3.2")
    compileOnly(":debugvalue-clion-2022.2.1")
    compileOnly(":debugvalue-goland-2022.2.1")
    compileOnly(":debugvalue-intellij-2022.2.1")
    compileOnly(":debugvalue-phpstorm-2022.2.1")
    compileOnly(":debugvalue-pycharm-2022.2.1")
    compileOnly(":debugvalue-rider-2022.2.1")
    compileOnly(":database-plugin-2022.2.1")
    compileOnly(":jsr305-2.0.1")
}
